# FinanceRag

./: .gitignore  LLM_exploration.docx  README.md  pyproject.toml
Embeddings/: dataset_exploration.ipynb  embeddings.ipynb
data/ConvFinQA/: Timing_queries_ConvFinQA_Q2D.npy  extracted_queries_ConvFinQA.npy  extracted_tables_ConvFinQA.npy  queries_expanded_ConvFinQA_Q2D.npy  queries_expanded_ConvFinQA_rephrase.npy  table_summaries_ConvFinQA_long.npy  table_summaries_ConvFinQA_short.npy
data/FinQA/: extracted_queries_FinQA.npy  extracted_tables_FinQA.npy  queries_expanded_FinQA_Q2D.npy  queries_expanded_FinQA_rephrase.npy  table_summaries_FinQA_long.npy  table_summaries_FinQA_short.npy
data/MultiHeritt/: extracted_queries_MultiHeritt.npy  extracted_tables_MultiHeritt.npy  queries_expanded_MultiHeritt_Q2D.npy  queries_expanded_MultiHeritt_rephrase.npy  table_summaries_MultiHeritt_long.npy  table_summaries_MultiHeritt_short.npy
data/TATQA/: extracted_queries_TATQA.npy  extracted_tables_TATQA.npy  queries_expanded_TATQA_Q2D.npy  queries_expanded_TATQA_rephrase.npy  table_summaries_TATQA_long.npy  table_summaries_TATQA_short.npy
results/: df_results_ls.xlsx  df_results_ns.xlsx  df_results_q2d.xlsx  df_results_qr.xlsx  df_results_ss.xlsx
src/: LLM_query_expansion.ipynb  LLM_table_summaries.ipynb  Menage_table_LLM_quant.ipynb  RAG_pipeline.py  data_handler.py  data_processor.py  dataset.py  dataset_exploration.ipynb  embeddings.py  main.ipynb  plot.ipynb  utils.py
src/exploration/: dataset_exploration.ipynb  plot.ipynb
src/lib/: RAG_pipeline.py  data_handler.py  (+4 more)
(+20 files in other folders)
