[tool.poetry]
name = "financerag"
version = "0.1.0"
description = ""
authors = ["Alice Turrini & Alessio Conti"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
transformers = "^4.48.1"
torch = {version = "^2.5.1+cu118", source = "torch"}
ipywidgets = "^8.1.5"
numpy = ">=1.21.6,<2.2.2"
pandas = "^2.2.3"
nltk = "^3.9.1"
spacy = "^3.8.4"
scikit-learn = "^1.6.1"
faiss-cpu = "^1.9.0.post1"
sentence-transformers = "^3.4.1"
matplotlib = "<3.10"
plotly = "^6.0.0"
nbformat = "^5.10.4"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
